--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,7 +1,23 @@
-include.path=${php.global.include.path}
+auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
+auxiliary.org-netbeans-modules-javascript2-requirejs.enabled=true
+auxiliary.org-netbeans-modules-php-editor.fluent_2e_setter_2e_project_2e_property=false
+auxiliary.org-netbeans-modules-php-editor.getter_2e_setter_2e_method_2e_name_2e_generation=AS_JAVA
+auxiliary.org-netbeans-modules-php-editor.public_2e_modifier_2e_project_2e_property=true
+auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
+browser.reload.on.save=true
+code.analysis.excludes=
+ignore.path=
+include.path=\
+    ${php.global.include.path}
 php.version=PHP_82
 source.encoding=UTF-8
 src.dir=.
 tags.asp=false
 tags.short=false
+testing.providers=
 web.root=.
